--- a/src/_includes/_layouts/secondary.njk
+++ b/src/_includes/_layouts/secondary.njk
@@ -1,3 +1,11 @@
+{# 
+  Secondary Layout
+
+  Project: Baythium Packer
+  File: /src/_includes/_layouts/secondary.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
+
 {% extends "base.njk" %}
 
 {% block content %}
