--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -1,4 +1,10 @@
-<!-- Footer Partial -->
+{# 
+  App Footer Partial
+
+  Project: Baythium Packer
+  File: /src/_includes/_partials/app-footer.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <footer class="app-footer">
   <div class="container">
