--- a/src/_includes/_partials/app-header.njk
+++ b/src/_includes/_partials/app-header.njk
@@ -1,4 +1,10 @@
-<!-- Header Partial -->
+{# 
+  App Header Partial
+
+  Project: Baythium Packer
+  File: /src/_includes/_partials/app-header.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 {% if app.environment === "development" %}
 <div class="alert alert--warning">
