--- a/src/_includes/_partials/patch-note.njk
+++ b/src/_includes/_partials/patch-note.njk
@@ -1,4 +1,10 @@
-<!-- Patch Note Partial -->
+{# 
+  Patch Note Partial
+
+  Project: Baythium Packer
+  File: /src/_includes/_partials/patch-note.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <div class="card mrmd--2">
   <div class="card__body">
