--- a/src/about.njk
+++ b/src/about.njk
@@ -1,9 +1,19 @@
 ---js
 {
   layout: "_layouts/base.njk",
-  title: "About"
+  title: "About",
+  changeFrequency: "weekly",
+  priority: 0.6
 }
 ---
+
+{# 
+  About
+
+  Project: Baythium Packer
+  File: /src/about.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- About Page -->
 <section class="section about">
