--- a/src/contact.njk
+++ b/src/contact.njk
@@ -2,10 +2,18 @@
 {
   layout: "_layouts/base.njk",
   title: "Contact",
-  changefreq: "monthly",
+  changeFrequency: "monthly",
   priority: 0.5
 }
 ---
+
+{# 
+  Contact
+
+  Project: Baythium Packer
+  File: /src/contact.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- Contact Page -->
 <section class="section contact">
