--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -1,9 +1,19 @@
 ---js
 {
   layout: "_layouts/base.njk",
-  title: "Contribution"
+  title: "Contribution",
+  changeFrequency: "weekly",
+  priority: 0.6
 }
 ---
+
+{# 
+  Contribution
+
+  Project: Baythium Packer
+  File: /src/contribution.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- Contribution Page -->
 <section class="section contribution">
