--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -1,9 +1,19 @@
 ---js
 {
   layout: "_layouts/base.njk",
-  title: "Documentation"
+  title: "Documentation",
+  changeFrequency: "weekly",
+  priority: 1
 }
 ---
+
+{# 
+  Documentation
+
+  Project: Baythium Packer
+  File: /src/documentation.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- Documentation Page -->
 <section class="section documentation">
