--- a/src/exceptions/404.njk
+++ b/src/exceptions/404.njk
@@ -2,9 +2,17 @@
 {
   layout: "_layouts/base.njk",
   title: "Page Not Found",
-  ignore: true
+  excludedFromSitemap: true
 }
 ---
+
+{# 
+  404 - Page Not Found
+
+  Project: Baythium Packer
+  File: /src/exceptions/404.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- 404 Page -->
 <section class="section page-not-found">
