--- a/src/faq.njk
+++ b/src/faq.njk
@@ -1,9 +1,19 @@
 ---js
 {
   layout: "_layouts/base.njk",
-  title: "FAQ"
+  title: "FAQ",
+  changeFrequency: "weekly",
+  priority: 0.7
 }
 ---
+
+{# 
+  FAQ
+
+  Project: Baythium Packer
+  File: /src/faq.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- FAQ Page -->
 <section class="section faq">
