--- a/src/index.njk
+++ b/src/index.njk
@@ -2,10 +2,18 @@
 {
   layout: "_layouts/base.njk",
   title: "Home",
-  changefreq: "weekly",
+  changeFrequency: "weekly",
   priority: 0.8
 }
 ---
+
+{# 
+  Home
+
+  Project: Baythium Packer
+  File: /src/index.njk
+  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+#}
 
 <!-- Home Page -->
 <section class="section home">
