--- a/src/styles/animations/font.scss
+++ b/src/styles/animations/font.scss
@@ -1,7 +1,7 @@
 /**
  * Font
  * 
- * Project: Bayesian Packer
+ * Project: Baythium Packer
  * File: /src/scss/animations/font.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
