--- a/src/styles/components/app-header.scss
+++ b/src/styles/components/app-header.scss
@@ -1,7 +1,7 @@
 /**
  * App Header
  * 
- * Project: Bayesian Packer
+ * Project: Baythium Packer
  * File: /src/scss/components/app-header.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
