--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,7 +1,7 @@
 /**
  * Navigation
  * 
- * Project: Bayesian Packer
+ * Project: Baythium Packer
  * File: /src/scss/components/navigation.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
