--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -1,3 +1,11 @@
+/**
+ * Custom Baythium Aspectus
+ *
+ * Project: Bayesian Packer
+ * File: /src/styles/custom-baythium-aspectus.scss
+ * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ */
+
 /* VARIABLES */
 @import "variables/all"; 
 
