--- a/src/styles/fonts/brands.scss
+++ b/src/styles/fonts/brands.scss
@@ -1,8 +1,8 @@
 /**
  * Brands
  * 
- * Project: Bayesian Packer
- * File: /src/scss/fonts/brands.scss
+ * Project: Baythium Packer
+ * File: /src/styles/fonts/brands.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  *
  * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
