--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,3 +1,14 @@
+/**
+ * Icons
+ *
+ * Project: Bayesian Packer
+ * File: /src/styles/icons.scss
+ * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ *
+ * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ */
+
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
 readers do not read off random characters that represent icons */
 
