--- a/src/styles/variables/all.scss
+++ b/src/styles/variables/all.scss
@@ -2,7 +2,7 @@
  * All
  *
  * File: /src/styles/variables/_all.scss
- * Project: Bayesian Packer
+ * Project: Baythium Aspectus
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
 
