--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -1,7 +1,7 @@
 /**
  * Color
  *
- * Project: Bayesian Aspectus
+ * Project: Baythium Aspectus
  * File: /src/styles/variables/color.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  *
