--- a/src/patch-notes/2020-01-15/index.njk
+++ b/src/patch-notes/2020-01-15/index.njk
@@ -1,16 +1,20 @@
----
-layout: "_layouts/base.njk"
-author: "Damien Bayes"
-title: Patch Note 1.0
-date: 2020-01-15
-tags: "patch_notes"
+---js
+{
+  layout: "_layouts/base.njk",
+  author: "Damien Bayes",
+  title: "Patch Note 1.0",
+  date: "2020-01-15",
+  tags: "patch_notes",
+  changeFrequency: "daily",
+  priority: 1
+}
 ---
 
 <section class="section">
   <div class="row">
     <!-- Deck 1 -->
     <div class="sm-column-4">
-      {% include "_partials/path-note.njk" %}
+      {% include "_partials/patch-note.njk" %}
     </div>
 
     <!-- Deck 2 -->
