--- a/src/patch-notes/2020-03-22/index.njk
+++ b/src/patch-notes/2020-03-22/index.njk
@@ -1,18 +1,20 @@
----
-layout: "_layouts/base.njk"
-author: "Damien Bayes"
-title: Patch Note 1.4
-date: 2020-03-22
-tags: "patch_notes"
-changefreq: "daily"
-priority: 1
+---js
+{
+  layout: "_layouts/base.njk",
+  author: "Damien Bayes",
+  title: "Patch Note 1.4",
+  date: "2020-03-22",
+  tags: "patch_notes",
+  changeFrequency: "daily",
+  priority: 1
+}
 ---
 
 <section class="section">
   <div class="row">
     <!-- Deck 1 -->
     <div class="sm-column-4">
-      {% include "_partials/path-note.njk" %}
+      {% include "_partials/patch-note.njk" %}
     </div>
 
     <!-- Deck 2 -->
