--- a/src/sitemap.xml.njk
+++ b/src/sitemap.xml.njk
@@ -1,18 +1,19 @@
+---js
+{
+  permalink: "/sitemap.xml",
+  eleventyExcludeFromCollections: true
+}
 ---
-permalink: /sitemap.xml
-eleventyExcludeFromCollections: true
----
-
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   {% for page in collections.all %}
-    {%- unless item.data.ignore == true %}
+    {%- if item.data.excludedFromSitemap != true %}
       <url>
         <loc>https://packer.baythium.com{{ page.url | url }}</loc>
         <lastmod>{{ page.date.toISOString() }}</lastmod>
-        <changefreq>{{ page.data.changeFreq }}</changefreq>
+        <changefreq>{{ page.data.changeFrequency }}</changefreq>
         <priority>{{ page.data.priority }}</priority>
       </url>
-    {%- endunless %}
+    {%- endif %}
   {% endfor %}
 </urlset>
