--- a/src/styles/components/faq.scss
+++ b/src/styles/components/faq.scss
@@ -1,7 +1,7 @@
 /**
  * FAQ
  * 
- * Project: Bayesian Packer
+ * Project: Baythium Packer
  * File: /src/scss/components/faq.scss
  * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
  */
