--- a/src/styles/fonts/regular.scss
+++ b/src/styles/fonts/regular.scss
@@ -1,4 +1,10 @@
 /*!
+ * Regular
+ *
+ * Project: Baythium Packer
+ * File: /src/styles/fonts/brands.scss
+ * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ *
  * Font Awesome Free 5.13.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
