--- a/src/contact.njk
+++ b/src/contact.njk
@@ -2,7 +2,7 @@
 {
   layout: "_layouts/base.njk",
   title: "Contact",
-  changeFrequency: "monthly",
+  changeFrequency: "yearly",
   priority: 0.5
 }
 ---
