--- a/src/faq.njk
+++ b/src/faq.njk
@@ -2,7 +2,7 @@
 {
   layout: "_layouts/base.njk",
   title: "FAQ",
-  changeFrequency: "weekly",
+  changeFrequency: "monthly",
   priority: 0.7
 }
 ---
