--- a/src/about.njk
+++ b/src/about.njk
@@ -2,7 +2,7 @@
 {
   layout: "_layouts/base.njk",
   title: "About",
-  changeFrequency: "weekly",
+  changeFrequency: "yearly",
   priority: 0.6
 }
 ---
