--- a/src/patch-notes/2020-03-22/index.njk
+++ b/src/patch-notes/2020-03-22/index.njk
@@ -5,7 +5,7 @@
   title: "Patch Note 1.4",
   date: "2020-03-22",
   tags: "patch_notes",
-  changeFrequency: "daily",
+  changeFrequency: "monthly",
   priority: 1
 }
 ---
@@ -26,7 +26,7 @@
           <!-- Headline -->
           <div class="headline">
             <h1>{{ title }}</h1>
-            <p>{{ date | convertToReadableDate }}</p>
+            <p>{{ date | humanReadableFormat }}</p>
           </div>
 
           <!-- Table of contents -->
