--- a/src/locale/ru/index.njk
+++ b/src/locale/ru/index.njk
@@ -59,8 +59,8 @@
   <div class="card">
     <div class="card__body">
       <div class="headline headline--normal">
-        <h2 class="headline__title">Features</h2>
-        <p class="headline__description">We do the work and you stay focused on the big picture</p>
+        <h2 class="headline__title">Особенности</h2>
+        <p class="headline__description">Мы делаем всю рутинную работу, вы фокусируетесь на масштабных целях бизнеса</p>
       </div>
     </div>
   </div>
