--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -83,7 +83,11 @@ description: "Large-scale and secure folder and file archiver for automating you
     <noscript>
       <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <script src="/js/bayesian-aspectus.min.js"></script>
+
+    <script src="/js/baythium-aspectus.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
+
     <!-- 1. Capture the javascript content as a nunjucks variable -->
     {% set js %}
       {% include "_js/global.js" %}
@@ -92,15 +96,5 @@ description: "Large-scale and secure folder and file archiver for automating you
     <script>
       {{ js | minifyJs | safe }}
     </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){ dataLayer.push(arguments); }
-      gtag("js", new Date());
-      gtag("config", "UA-163071822-1");
-</script>
-
   </body>
 </html>
